syntax = "proto3";

option csharp_namespace = "GrpcAPI";

package Grpc;

// The service definition.
service GrpcTest {
  rpc GetMessage (MessageRequest) returns (MessageReply);
}

// The request message containing the method's name.
message MessageRequest {
  string name = 1;
}

// The response message.
message MessageReply {
  string message = 1;
}